# GPTQModel

./: .gitignore  MANIFEST.in  README.md  awq_example.py  chat_vllm.py  gptq_example.py  lora_example.py  pyproject.toml  requirements.txt  setup.py  setup.sh
awequant/: __init__.py  version.py
awequant/looper/: awq_processor.py  dequantize_processor.py  input_cache.py  linear_mode.py  loop_processor.py  module_looper.py  named_module.py  stage_inputs_capture.py  stage_layer.py  stage_subset.py  tensorparallel_weight_processor.py
awequant/models/: __init__.py  _const.py  auto.py  base.py  loader.py  moe_lifecycle.py  writer.py
awequant/models/definitions/: __init__.py  llama.py  qwen3.py
awequant/nn_modules/: LICENSE  converter.py  hooked_linear.py
awequant/nn_modules/qlinear/: __init__.py  gemm_awq.py  gemm_awq_triton.py  gemv_awq.py  gemv_fast_awq.py  (+2 more)
awequant/quantization/: __init__.py  config.py  dtype.py  failsafe_smooth.py  quantizer.py
awequant/utils/: __init__.py  _extension_loader.py  attn_mask.py  audio.py  backend.py  calibration.py  colors.py  cpp.py  ctx.py  cuda_activation_buffer.py  data.py  env.py  failsafe.py  gemv.py  hf.py  image.py  importer.py  inspect.py  linalg_warmup.py  logger.py  looper_helpers.py  memory.py  model.py  modelscope.py  module_locks.py  nogil_patcher.py  offload.py  pause_resume.py  perplexity.py  python.py  rocm.py  safe.py  safetensor.py  stream.py  structure.py  tensor.py  terminal.py  threads.py  threadx.py  torch.py  (+1 more)
awequant_ext/: __init__.py  pack_block_cpu.cpp
gptqmodel/: __init__.py
gptqmodel/looper/: awq_processor.py  dequantize_processor.py  loop_processor.py  module_looper.py  stage_layer.py  stage_subset.py  tensorparallel_weight_processor.py
gptqmodel/models/: auto.py  base.py  loader.py  writer.py
gptqmodel/quantization/: __init__.py  config.py  quantizer.py
gptqmodel/utils/: backend.py  importer.py  model.py
scripts/: eval_model.py
tests/: test_awq_clip_consistency.py  test_awq_fp16_matmul_heuristic.py  test_awq_only_mode.py  test_awq_weight_mean.py
(+18 files in other folders)
