[build-system]
requires = [
    "setuptools>=80.9",
    "ninja>=1.13.0", # required for faster compilataion
]
build-backend = "setuptools.build_meta"

[project]
name = "GPTQModel"
dynamic = ["version"]
description = "AWQ-only LLM model quantization toolkit."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
authors = [
    { name = "ModelCloud", email = "qubitium@modelcloud.ai" },
]
keywords = ["awq", "quantization", "large-language-models", "transformers", "llm", "compression"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: C++",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "accelerate>=1.10.1",
    "numpy==2.2.6",
    "torch>=2.8.0",
    "safetensors>=0.6.2",
    "transformers>=4.57.1",
    "threadpoolctl>=3.6.0",
    "packaging>=24.2",
    "device-smi>=0.5.3",
    "protobuf>=6.32.0",
    "pillow>=11.3.0",
    "hf_transfer>=0.1.9",
    "huggingface_hub>=0.34.4",
    "tokenicer>=0.0.6",
    "logbar>=0.2.1",
    "datasets>=3.6.0",
    "pyarrow>=21.0",
    "dill>=0.3.8", # datasets requirements
    "pypcre>=0.2.9",
    # "cython>=3.1.4", # required by hf-xet/hf-transfer
# "flash-attn>=2.8.3", <-- install for lower vram usage
]

[project.urls]
Homepage = "https://github.com/ModelCloud/GPTQModel"

[project.optional-dependencies]
test = [
    "pytest>=8.3.5",
    "pytest-timeout>=2.3.1",
    "parameterized",
]
quality = [
    "ruff==0.13.0",
    # "isort==6.0.1",
]
